# improved-modelling-for-worms-locomotion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bitbucket-pipelines.yml  umfpack-simple.cc  worm-model.cc  worm-track.py
cmake-modules/: FindSuiteSparse.cmake
data/: model-parameters
lib/: discretefunction.hh  femscheme.hh  matrix.hh  mesh.hh  model.hh  modelOneThreshold.hh  modelThreshold.hh  parameter.hh  solver.hh  timeprovider.hh  umfpackmatrix.hh  vector.hh  vtuwriter.hh
tests-data/: Activation.txt  Beta.txt  Kappa.txt  energy.txt  feedback.txt  pointx  pointy
